--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Deployment Lab</title>
 </head>
 
 <body>
     <h1>BUY NOW!</h1>
+    <img src="../public/buy-now-pic.jpg">
 </body>
 
 </html>
