added CSS and description

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,12 @@
 
 <body>
     <h1>BUY NOW!</h1>
+    <p id="scroll-container">
+    <div id"scroll-text">Limited Time Offer! Click the below immediately. This is not a scam!</div>
+    </p>
     <img src="./buy-now-pic.jpg">
+
+    <script src="./index.js"></script>
 </body>
 
 </html>
