added JS and css

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <h1>BUY NOW!</h1>
-    <p id="scroll-container">
-    <div id"scroll-text">Limited Time Offer! Click the below immediately. This is not a scam!</div>
+    <p>
+        <marquee direction="left">Limited Time Offer! Click the below immediately. This is not a scam!</marquee>
     </p>
-    <img src="./buy-now-pic.jpg">
+    <a href="#"><img src="./buy-now-pic.jpg" id="notification-alert"></a>
 
     <script src="./index.js"></script>
 </body>
